@@ -378,9 +378,9 @@ div.ns_menu_area ul li, div.ns_menu_area ol li {
 <script src="src/base64.js" type="text/javascript"></script>
 <script src="src/parser.js" type="text/javascript"></script>
 <script src="src/special.js" type="text/javascript"></script>
+<script src="src/core.js" type="text/javascript"></script>
 <script src="src/stickwiki.js" type="text/javascript"></script>
 <script src="src/datalayer.js" type="text/javascript"></script>
-<script src="src/core.js" type="text/javascript"></script>
 <script src="src/i18n.js" type="text/javascript"></script>
 <script src="src/import.js" type="text/javascript"></script>
 <script src="src/export.js" type="text/javascript"></script>
